syntax = "proto3";

package service;

// The checkup service definition.
service checkup {
	// Add Endpoint Function
	rpc AddHTTPEndpoint (AddHttpEndpointRequest) returns (EndpointResponse) {}
	rpc AddTCPEndpoint (AddTcpEndpointRequest) returns (EndpointResponse) {}
	
	// Delete Endpoint Function
	rpc DeleteEndpoint (DeleteEndpointRequest) returns (EndpointResponse) {}

	// Endpoint Inspection Function
	rpc ListEndpoint (ListEndpointRequest) returns (ListEndpointResponse) {}
}

message GenericEndpointRequest {
	string name = 1;
	string url = 2;
	int32 attempts = 3;
	int64 thresholdrtt = 4;
}

message AddHttpEndpointRequest {
	GenericEndpointRequest endpoint = 1;
	int32 upstatus = 2;
	string must_contain = 3;
	string must_not_contain =4;
	string headers = 5;
}

message AddTcpEndpointRequest {
	GenericEndpointRequest endpoint = 1;
	bool tls_enabled = 2;
	bool tls_skip_verify = 3;
	string tls_ca_file = 4;
	int64 timeout = 5;
}

message DeleteEndpointRequest {
	string url = 1;
}

message EndpointResponse {
	string message = 1;
}

message ListEndpointRequest {
	bool check = 1;
}


message ListEndpointResponse {
	message Endpoint {
		string name = 1;
		string url = 2;
		string status = 3;
	}
	repeated Endpoint endpoints = 1;
}